[package]
name = "caddy-gen"
version = "0.2.0"
edition = "2024"
description = "Generate and manage Caddyfile.dev from templates with multi-folder support"
authors = ["Wlad Paiva <me@wladpaiva.xyz>"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
glob = "0.3"
dirs = "5"
