[package]
name = "caddy-dev"
version = "0.2.0"
edition = "2024"
description = "Local Caddy development tool for generating and managing Caddyfile.dev from templates"
authors = ["Wlad Paiva <me@wladpaiva.xyz>"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
glob = "0.3"
dirs = "5"
